...
- (void)onBackButtonPressed:(id)sender {
    if(self.scannedPlantsArray != nil) {
      
      NSLog(@"The scanned plant array has something in it");
      SCLAlertView *backAlert = [SCLAlertCreator createSCLAlertViewWithColor:Green_Accent_Color];
      
      [backAlert addButton:@"Yes" actionBlock:^{
        [self.navigationController popViewControllerAnimated:YES];
      }];
      
      [backAlert showNotice:self title:@"Warning"subTitle:@"Going back will cancel current progress. Is this Okay?" closeButtonTitle:@"Cancel" duration:0.0f];
    } else {
        [self.navigationController popViewControllerAnimated:YES];
    }
}

#pragma mark - View Did:
...
            }
            else if ([self.operation isEqualToString:@"destroy"]) {
              actionButtonString = [NSString stringWithFormat:@"Destroy %lu Plant", (unsigned long)self.scannedPlantsArray.count];
            }
            
            else if ([self.operation isEqualToString:@"clone"]) {
              actionButtonString = @"Clone this plant";
            }
        } else {
            if ([self.operation isEqualToString:@"move"]) {
              actionButtonString = [NSString stringWithFormat:@"Move %lu Plants", (unsigned long)self.scannedPlantsArray.count];
            }
            else if ([self.operation isEqualToString:@"destroy"]) {
...
