...
                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="QGE-Ge-tY5"/>
                                    <constraint firstAttribute="width" constant="119" id="bdN-1M-yhe"/>
                                </constraints>
                                <state key="normal" title="Create Clones">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="QGE-Ge-tY5"/>
                                        <exclude reference="bdN-1M-yhe"/>
...
            </objects>
            <point key="canvasLocation" x="2862" y="-351"/>
        </scene>
        <!--MainMenuViewController-->
        <scene sceneID="ufC-wZ-h7g">
            <objects>
                <viewController storyboardIdentifier="MainMenuViewController" title="MainMenuViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vXZ-lx-hvc" customClass="MainMenuVC" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                    <constraint firstAttribute="height" constant="30" id="bwm-1x-6ES">
                                        <variation key="widthClass=compact" constant="42"/>
                                    </constraint>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                <color key="tintColor" red="0.12549019610000001" green="0.69411764710000001" blue="0.54117647059999996" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Login"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="C1Y-7m-RxQ"/>
                                        <exclude reference="bwm-1x-6ES"/>
                                    </mask>
                                </variation>
...
