...
        self.operation = @"Destroy";
    } else if (sender == self.lookupPlantsButton) {
        self.operation = @"Lookup";
    } else if (sender == self.harvestPlantsButton) {
        self.operation = @"Harvest";
    } else if (sender == self.cloneBurgerBarButton) {
        self.operation = @"Clone";
    }
}


- (void)prepareForSegue:(UIStoryboardSegue *)segue sender:(UIButton *)sender
{
...
    [self.navigationController.navigationBar setBarTintColor:Nav_Bar_Background_Color];
    UIImage *FlowhubImage = [UIImage imageNamed:@"flowhub_white"];
    UIImageView *FlowhubImageimageView = [[UIImageView alloc] initWithImage:FlowhubImage];
    self.navigationItem.titleView = FlowhubImageimageView;
    self.navigationItem.leftBarButtonItem.title = @"Main";

    UIBarButtonItem *item = [[UIBarButtonItem alloc] initWithImage:[UIImage imageNamed:@"FlowhubLogoNavBar"] style:UIBarButtonItemStylePlain target:self action:@selector(onBurgerMenuButtonPressed:)];
    self.navigationItem.leftBarButtonItem = item;

    UIBarButtonItem *logoutButton = [[UIBarButtonItem alloc] initWithTitle:@"Logout" style:UIBarButtonItemStylePlain target:self action:@selector(onLogoutButtonPressed)];
    self.navigationItem.rightBarButtonItem = logoutButton;
  
}
...
