...
    UIToolbar* numberKeyBoardToolbar = [[UIToolbar alloc]initWithFrame:CGRectMake(0, 0, 320, 50)];
    numberKeyBoardToolbar.barStyle = UIBarStyleBlackTranslucent;
    numberKeyBoardToolbar.barTintColor = Main_Background_Color;
    numberKeyBoardToolbar.items = [NSArray arrayWithObjects:
                                   [[UIBarButtonItem alloc]initWithTitle:@"Cancel" style:UIBarButtonItemStyleDone target:self action:@selector(cancelNumberPad)],
                                   [[UIBarButtonItem alloc]initWithBarButtonSystemItem:UIBarButtonSystemItemFlexibleSpace target:nil action:nil],
                                   [[UIBarButtonItem alloc]initWithTitle:@"Next" style:UIBarButtonItemStyleDone target:self action:@selector(applyToolBarButtonPressed)],
                                   nil];
    
    [numberKeyBoardToolbar setTintColor:[UIColor whiteColor]];
    [numberKeyBoardToolbar sizeToFit];
    
    self.numberOfClonesTextField.inputAccessoryView = numberKeyBoardToolbar;
...
